tests/ui/ambiguous-span.stderr
error[E0283]: type annotations needed
  --> tests/ui/ambiguous-span.rs:15:28
   |
15 |     let _ = quote_spanned!(CallSite::get()=> ...);
   |             ---------------^^^^^^^^^^^^^^^-------
   |             |              |
   |             |              cannot infer type
   |             required by a bound introduced by this call
   |
   = note: cannot satisfy `_: IntoSpan`
   = help: the following types implement trait `IntoSpan`:
             DelimSpan
             Span
